Better structure and comments